# SuperAutoTest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .saptest.toml  .saptest_doc.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  pets.json
.github/workflows/: ci.yaml  coverage.yaml
benches/: .gitignore  battle_benchmarks.rs  battle_benchmarks_sapai.ipynb  saptest_raw_graphs.csv  saptest_raw_no_graphs.csv
config/: log_config.yaml  sources.json
docs/: README.md
docs/examples/: Cargo.toml  README.md  battle_ant_teams.json  battle_invalid.json  input_draw.json  input_draw_seeded.json  input_loss.json  input_win.json  output_draw.json  output_loss.json  output_win.json
docs/examples/graphs/: blowfish_99.dot  deer_mushroom_zombie_fly.dot  mammoth.dot  rhino.dot
docs/examples/src/: blowfish_99.rs  deer_mushroom_zombie_fly.rs  main.rs  mushroom_scorpion.rs  permanent_coconut.rs  pet_combinations.rs  rhino.rs  shop_combinations.rs
src/: cli.rs  main.rs
src/api/: mod.rs  route_battle.rs  route_foods.rs  route_home.rs  route_pets.rs  routes.rs  server.rs
src/common/: effect.rs  error.rs  food.rs  game.rs  mod.rs  pet.rs  record.rs  regex_patterns.rs  team.rs  trigger.rs
src/common/battle/: effect.rs  mod.rs  state.rs  team.rs  team_effect_apply.rs  team_summary.rs  trigger.rs
src/common/foods/: effects.rs  food.rs  mod.rs  names.rs
src/common/graph/: effect_graph.rs  mod.rs
src/common/pets/: ant.rs  combat.rs  effects.rs  mod.rs  mosquito.rs  names.rs  pet.rs
src/common/tests/: common.rs  mod.rs  test_food.rs  test_pet.rs  test_team.rs  test_team_build.rs  test_team_t1.rs  test_team_t2.rs  test_team_t3.rs  test_team_t4.rs  test_team_t5.rs  test_team_t6.rs
src/db/: mod.rs  pack.rs  query.rs  record.rs  setup.rs  utils.rs
src/db/sql/: create_tables.sql  insert_food.sql  insert_pet.sql
src/lib/: config.rs  error.rs  lib.rs  logging.rs  main.rs  regex_patterns.rs
src/lib/battle/: actions.rs  effect.rs  mod.rs  state.rs  stats.rs  team.rs  team_effect_apply.rs  team_serialize.rs  team_summary.rs  team_viewer.rs  trigger.rs
src/lib/db/: mod.rs  pack.rs  query.rs  record.rs  setup.rs  utils.rs
src/lib/db/sql/: insert_pet.sql
src/lib/effects/: actions.rs  effect.rs  formatting.rs  mod.rs  state.rs  stats.rs  trigger.rs
src/lib/foods/: effects.rs  food.rs  mod.rs  names.rs
src/lib/graph/: effect_graph.rs
src/lib/pets/: combat.rs  effects.rs  mod.rs  names.rs  pet.rs
src/lib/shop/: mod.rs  store.rs  team_shopping.rs  trigger.rs  viewer.rs
src/lib/teams/: combat.rs  effect_helpers.rs  effects.rs  hard_mode.rs  history.rs  mod.rs  serialize.rs  team.rs  team_effect_apply.rs  toys.rs  viewer.rs
src/lib/tests/: common.rs  mod.rs  test_food.rs  test_hard_mode.rs  test_hard_mode_toy_t1.rs  test_hard_mode_toy_t2.rs  test_hard_mode_toy_t3.rs  test_hard_mode_toy_t4.rs  test_hard_mode_toy_t5.rs  test_hard_mode_toy_t6.rs  test_parse_ailment.rs  test_parse_food.rs  test_parse_hard_mode_toys.rs  test_parse_names.rs  test_parse_pet.rs  test_parse_token.rs  test_parse_toy.rs  test_pet.rs  test_shop.rs  test_team_build.rs  test_team_shop.rs  test_team_t1.rs  test_team_t2.rs  test_team_t3.rs  test_team_t4.rs  test_team_t5.rs  test_team_t6.rs  test_toy_t1.rs  test_toy_t2.rs  test_toy_t3.rs  test_toy_t4.rs  test_toy_t5.rs  test_toy_t6.rs  test_toys.rs
src/lib/toys/: effects.rs  mod.rs  names.rs  toy.rs
src/lib/visualization/: dag.rs  digraph.rs  mod.rs  tsv.rs
src/lib/wiki_scraper/: common.rs  mod.rs  parse_ailment.rs  parse_food.rs  parse_hard_mode_toys.rs  parse_icons.rs  parse_names.rs  parse_pet.rs  parse_tokens.rs  parse_toy.rs
src/lib/wiki_scraper/tests/: test_parse_food.rs  test_parse_pet.rs  test_parse_token.rs
src/server/: .dockerignore  .gitignore  Cargo.toml  main.rs  mod.rs  route_battle.rs  route_foods.rs  route_home.rs  route_pets.rs
src/server/examples/: output_draw_seeded.json  output_loss.json
src/server/src/: route_battle.rs  route_foods.rs  route_home.rs  route_pets.rs  setup.rs  utils.rs
src/simulate/: battle.rs
src/wiki_scraper/: common.rs  error.rs  mod.rs  parse_food.rs  parse_pet.rs  parse_tokens.rs  parser.rs  regex_patterns.rs
src/wiki_scraper/tests/: mod.rs  test_parse_food.rs  test_parse_pet.rs  test_parse_token.rs
tests/: .gitignore  test_integration.rs  test_shop.rs
