[dependencies]
rand = "0.8.5"
rusqlite = {version = "0.28", features = ["bundled"]}
serde = {version = "1.0.154", features = ["derive", "rc"]}
serde_json = "1.0"
lazy-regex = "2.5.0"
regex = "1.7.1"
itertools = "0.10.5"
log = "0.4.17"
petgraph = "0.6.2"
rand_chacha = "0.3.1"
thiserror = "1.0.38"
lazy_static = "1.4.0"
r2d2_sqlite = "0.21.0"
r2d2 = "0.8.10"
toml = "0.7.2"
ureq = "2.6.2"
indexmap = { version = "1.9.3", features = ["serde"] }

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "battle_benchmarks"
harness = false

[lib]
name = "saptest"
path = "src/lib/lib.rs"

[package]
name = "saptest"
version = "0.5.0"
edition = "2021"
authors = ["Keisuke K. Oshima <koshima789@gmail.com>"]
description = "A library for testing Super Auto Pets teams."
repository = "https://github.com/koisland/SuperAutoTest/"
readme = "README.md"
license = "MIT"

[workspace]
members = [
    "docs/examples",
    ".",
]
